fixed some minor issues regarding cart

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FarmApp</title>
+    <title>AGRO PREDICT</title>
     <script
       src="https://kit.fontawesome.com/d9704c1d46.js"
       crossorigin="anonymous"
